src/snapshots/rlox__test_runtime__basic_if.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(r#\"\n        if true {\n            print \"TRUE\";\n        }\n        if false {\n            print \"FALSE\";\n        }\n        \"#)"
---
stdout:
TRUE


stderr:


