src/snapshots/rlox__test_runtime__basic_scope.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        {\n            var a = 1;\n            print a;\n        }\n        \")"
---
stdout:
1


stderr:


