src/snapshots/rlox__test_runtime__basic_then.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        if true {\n            print 1;\n        } else {\n            print 2;\n        }\n        \")"
---
stdout:
1


stderr:


