src/snapshots/rlox__test_runtime__basic_while_loop.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var a = 0;\n        while a < 10 {\n            a = a + 1;\n            print a;\n        }\n        print a;\n        \")"
---
stdout:
1
2
3
4
5
6
7
8
9
10
10


stderr:


