src/snapshots/rlox__test_runtime__cannot_use_local_var_in_declaration.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        {\n            var a = a;\n        }\n        \")"
---
stdout:


stderr:
Error: Undefined variable: a
   ╭─[<unknown>:3:2]
   │
 3 │             var a = a;
   │                     ─  
   │                         
───╯


