src/snapshots/rlox__test_runtime__clock_call_wrong_arity.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        clock(1);\n        \")"
---
stdout:


stderr:
Error: Function clock expects 0 arguments, but got 1
   ╭─[<unknown>:2:12]
   │
 2 │         clock(1);
   │         ─────  
   │                 
───╯


