src/snapshots/rlox__test_runtime__clock_overload.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        fun clock() {\n            return 1;\n        }\n        print clock();\n        \")"
---
stdout:
1


stderr:


