src/snapshots/rlox__test_runtime__clock_scoped.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        {\n            clock();\n        }\n        \")"
---
stdout:


stderr:


